[package]
name = "openconnect-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.60"
autotools = "0.2"
pkg-config = "0.3"
flate2 = "1.0"
tar = "0.4"
