[package]
name = "openconnect-sys"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only"
description = "Rust FFI bindings for openconnect, the open client for Cisco AnyConnect"
repository = "https://github.com/kenohassler/openconnect-sys/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.60"
pkg-config = "0.3"
