[package]
name = "openconnect-sys"
version = "0.1.0"
edition = "2021"
links = "openconnect"
license = "MIT OR Apache-2.0"
description = "Rust FFI bindings for OpenConnect, the open client for Cisco AnyConnect"
repository = "https://github.com/kenohassler/openconnect-sys/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.60"
pkg-config = "0.3"
